--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,8 @@
     				{{dat[0]}}
     				{{dat[1]}}
     				{{dat[2]}}
-    				<img src="{{dat[3]}}">
+    				{{dat[3]}}
+    				<img src="{{dat[4]}}">
     			</div>
     		</div>
     	</div>
