--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,13 @@ header .container {
 	width: 75%;
 }
 
+hr {
+	width: 80%;
+	color: #a9a9a9;
+	border-color: #a9a9a9;
+	background-color: #a9a9a9;
+}
+
 .container {
 	padding-top: 10px;
 	padding-bottom: 5px;
