--- a/templates/index.html
+++ b/templates/index.html
@@ -28,53 +28,28 @@
         <p class="lead">A social commentary on the cultural divide between those who were raised on the patriarchal expectations of normies and those who were given the lifestyle of a dank memer.</p>
       </div>
     </header>
+
     {% for dat in data %}
     	<div class="container">
     		<div class="row">
     			<div class="col-lg-8 mx-auto">
-    				{{dat[0]}}
-    				{{dat[1]}}
-    				{{dat[2]}}
-    				{{dat[3]}}
+            <h5>{{dat[1]}}</h5>
+    				Published: {{dat[0]}}<br />
+    				Hotness Score: {{dat[2]}}<br/>
+            <a href="{{dat[3]}}">Original post</a><br/>
     				<img src="{{dat[4]}}">
     			</div>
     		</div>
     	</div>
+      <hr />
     {% endfor %}
-    <section id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section id="services" class="bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-10 mx-auto">
             <h2>Services we offer</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
           </div>
         </div>
       </div>
