Made links open in new tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             <h5>{{dat[1]}}</h5>
     				Published: {{dat[0]}}<br />
     				Hotness Score: {{dat[2]}}<br/>
-            <a href="{{dat[3]}}">Original post</a><br/>
+            <a href="{{dat[3]}}" target="_blank">Original post</a><br/>
     				<img src="{{dat[4]}}">
     			</div>
     		</div>
