--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-	background-color: #000000;
+	background-color: #1e1e1e;
 }
 
 header .container {
@@ -24,4 +24,8 @@ hr {
 
 img {
 	max-width: 100%;
+}
+
+footer {
+	background-color: #1e1e1e;
 }
