added favicon + title

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>meow :3</title>
+    <title>Very Warm Memes</title>
+    <link href="{{url_for('static', filename='img/favicon.ico')}}" rel="icon" type="image/x-icon" />
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
@@ -51,8 +52,6 @@
       </div>
       <!-- /.container -->
     </footer>
-
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 
   </body>
 
