Added files for server

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <meta name="author" content="">
 
     <title>Very Warm Memes</title>
-    <link href="{{url_for('static', filename='img/favicon.ico')}}" rel="icon" type="image/x-icon" />
+
+    <link rel="icon" href="../static/img/parrot.gif" type="image/gif" >
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
